# alanrag

./: Cargo.toml  README.md  rag-mcp-server-quality-check.md  rag_config.yaml  test_document.md  uvm_test.md
scripts/: demo.sh  ingest.py  ingest.sh  query.py  query.sh
src/: client.rs  config.rs  lib.rs  main.rs
src/chunker/: code.rs  markdown.rs  mod.rs  pdf.rs  semantic.rs  text.rs
src/graph/: builder.rs  mod.rs  relationships.rs
src/mcp/: handlers.rs  mod.rs  server.rs
src/metrics/: mod.rs
src/search/: bm25.rs  mod.rs  query_enhancer.rs  retrieval.rs  semantic.rs
src/storage/: chunks.rs  embeddings.rs  index.rs  mod.rs
tests/: integration.rs
